# AI_UserStoryMachine

./: .env.example  .gitmodules  .vercelignore  README.md  StoryMachine_白皮书.md  WEB_README.md  ZHIPUAI_SETUP.md  app.py  debug_response.txt  example_prd.md  pyproject.toml  render.yaml  requirements.txt  run_web.py  start.sh  test_prd.md  vercel.json
.claude/: settings.local.json
doc/: workflow_zh.md
prd/: 智能座舱产品需求文档PRD.md
src/storymachine/: activities.py  ai.py  ai_zhipuai.py  auto_cli.py  cli.py  config.py  web_app.py  web_simple.py  workflow.py
src/storymachine/prompts/: acceptance_criteria_zh.md  enrich_context_zh.md  iterating_on_stories_zh.md  problem_breakdown_zh.md  problem_breakdown_zh_fixed.md  repo_questions_zh.md
tests/: test_config.py
软件管理训练大师/: README.md  app.js  app.json  app.wxss  project.private.config.json
软件管理训练大师/pages/profile/: profile.js  profile.wxml  profile.wxss
软件管理训练大师/pages/question/: question.js  question.wxml  question.wxss
软件管理训练大师/utils/: data.js
